--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ package-mode = false
 python = "^3.9"
 beautifulsoup4 = "^4.9.3"
 requests = "^2.28.1"
-python-telegram-bot = "^13.7"
+python-telegram-bot = ">=20.0"
 google-cloud-secret-manager = "^2.12.0"
 python-dotenv = "^1.0.1"
 
@@ -22,6 +22,7 @@ pytest = "^7.3.1"
 black = "^23.0.0"
 flake8 = "^6.0.0"
 python-dotenv = "^1.0.0"
+pytest-asyncio = "^0.21.1"
 
 [build-system]
 requires = ["poetry-core"]
