--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,14 @@ packages = [
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9.2,<4.0"
 beautifulsoup4 = "^4.9.3"
 requests = "^2.28.1"
 python-telegram-bot = ">=20.0"
 google-cloud-secret-manager = "^2.12.0"
 python-dotenv = "^1.0.1"
+cryptography = "^44.0.0"
+google-auth = "^2.37.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
